--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,42 +1,20 @@
+html, body, ul, li, p {margin: 0; padding: 0; font-family: 'Poppins', sans-serif;}
+a {text-decoration: none;}
+a:link, a:visited {color:var(--secondary)}
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex; 
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+body, input {font-family: 'Poppins', sans-serif;}
+header, main, footer {padding: 0 20px; box-sizing: border-box;}
+h1 {font-weight: 900;}
+main h1 {
+  padding-left: 10px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+main {padding: 30px 20px;}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  background-color: var(--gray-blue-grey-blue-98);
 }
