--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,68 +1,40 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --white:#fff;
+  --gray-blue-grey-blue-98: #F7F8FA;
+  --gray-blue-grey-blue-95: #EDEFF2;
+  --gray-blue-grey-blue-94: rgb(247 248 250 / 94%);
+  --gray-blue-grey-blue-80:#ADB8CC;
+  --gray-blue-grey-blue-70: #7D8FB3;
+  --gray-blue-grey-blue-60: #6B7A99;
+  --gray-blue-grey-blue-50: #4D5E80;
+  --grey-normal:#586870;
+  --primary: #07d2be;
+  --primaryAlpha: rgba(7, 210, 190, 0.291);
+  --secondary:#F23F73;
+  --grey-light:#C0C6C9;
+  font-size:10px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+p {font-size:1.5rem;}
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
+/* Dejo para dps por si implemento modo oscuro pero dependo de que las imágenes de la API no tengan el fondo blanco*/
+/*
+@media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+ 
+    --white: #000;
+    --gray-blue-grey-blue-98: #2c3548;
+    --gray-blue-grey-blue-95: #6B7A99;
+    --gray-blue-grey-blue-94: rgba(125, 143, 179, 0.94);
+    --gray-blue-grey-blue-80: #ADB8CC;
+    --gray-blue-grey-blue-70: rgb(247 248 250 / 94%);
+    --gray-blue-grey-blue-60: #EDEFF2;
+    --gray-blue-grey-blue-50: #F7F8FA;
+    --grey-normal: #586870;
+    --primary: #07d2be;
+    --secondary: #F23F73;
+    --grey-light: #C0C6C9;
+    font-size: 10px;
   }
 }
+*/
