--- a/front/src/screens/EditList/editList.css
+++ b/front/src/screens/EditList/editList.css
@@ -1,3 +1,8 @@
 .iconoPlus {
     font-size: 3rem;
 }
+
+.edit .card, .edit article {
+    background-color:var(--backgroundBody);
+    padding-bottom: 5rem;
+}
