--- a/front/src/components/Counter/counter.css
+++ b/front/src/components/Counter/counter.css
@@ -14,6 +14,27 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.btn {
+    width: 289px;
+    height: 48px;
+    padding: 8px 20px;
+    margin-left: auto;
+    margin-top: 30px;
+    border-radius: 8px;
+    background-color: var(--secondary);
+    color: var(--whiteBtn);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+    border: 0;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.btn:hover {
+    background-color: var(--primary);
+}
+
 .counter .btn {
     margin: 0;
     margin-left: auto;
