--- a/front/src/components/ProductsList/productslist.css
+++ b/front/src/components/ProductsList/productslist.css
@@ -46,13 +46,35 @@
     font-size: 1.2rem;
 }
 
+.btnContainerCard {
+    display: flex;
+    gap: 20px;
+    padding: 30px;
+}
+
+.btnContainerCard .btn {
+    margin:0;
+    height: auto;
+    color: var(--whiteBtn);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    width: -webkit-fill-available;
+}
+
+.btnContainerCard .btn .cardPencilEditable {
+    color: var(--whiteBtn);
+    font-size:2rem;
+}
+
 .cardPencilEditable {
     font-size: 1.5vw;
-    color: var(--primary);
-    position: absolute;
+    color: var(--secondary);
+/*     position: absolute;
     left: 30px;
     top: 30px;
-    z-index: 3;
+    z-index: 3; */
 }
 
 @media (max-width: 1024px) {
