--- a/front/src/components/Search/search.css
+++ b/front/src/components/Search/search.css
@@ -1,6 +1,7 @@
 .searchInput {
     border-radius: 30px;
-    background: #FFF;
+    background: var(--white);
+    color:var(--black);
     border: 0;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.08);
     width: 350px;
