--- a/front/src/screens/DetailPage/detailpage.css
+++ b/front/src/screens/DetailPage/detailpage.css
@@ -22,7 +22,7 @@
     width: 40%;
     padding: 30px;
     box-sizing: border-box;
-    background-color: #fff;
+    background-color: var(--white);
     text-align: center;
 }
 
@@ -69,7 +69,6 @@
     .imgPriceContainer {
         width: 100%;
         text-align: center;
-        background: #fff;
         padding: 40px;
         box-sizing: border-box;
     }
