--- a/front/src/components/Menu/menu.css
+++ b/front/src/components/Menu/menu.css
@@ -13,7 +13,9 @@
 
 .menu .navItem {
     color: var(--gray-blue-grey-blue-70);
-    transition: .3s;
+    transition: .3s;    
+    display: flex;
+    align-items: center;
 }
 
 .menu .navItem:hover{
@@ -37,6 +39,11 @@
     top: -3px;
     right: -7px;
 }
+
+.edit .topHeader {
+    background-color: var(--primaryAlpha);
+}
+
 @media (max-width:576px) {
     .menu a svg {
         width: 25px;
